--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-AWS:REINVENT 2021 LAS VEGAS!!
+<html>
+  <head>
+  </head>
+  <body>
+    <div>AWS:REINVENT 2021 LAS VEGAS!!</div>
+  </body>
+</html>
